Aplicacion de SASS

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/estilos.css" />
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <meta name="description"
+    content="¡Descubre la belleza de nuestros arreglos florales y regalos personalizados! Ofrecemos desayunos, talleres y decoraciones únicas para cada ocasión. ¡Visítanos!">
+  <meta name="keywords" content=" Valentina Detalles, Flores, regalos, detalles personalizados, centros de mesa, Maracay, Aragua, arreglos florales, Bouquets">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   <title>Valentina detalles</title>
 </head>
 
@@ -23,7 +28,7 @@
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img src="./img/logo1.png" alt=""> </a>
+          <a class="navbar-brand" href="./index.html"><img src="./img/logo1.png" alt="logo"> </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -107,32 +112,32 @@
         <h2>!Servicios que ofrecemos!</h2>
         <div class="servicios-flex">
           <div>
-            <img src="./img/suscripcion.jpeg" alt="" />
+            <img src="./img/suscripcion.jpeg" alt="subcripcion" />
             <h3>Subcripcion Floral</h3>
             <a href="url-a-tu-servicio-1">Ver Catálogo</a>
           </div>
           <div>
-            <img src="./img/desayuno2.jpeg" alt="" />
+            <img src="./img/desayuno2.jpeg" alt="desayuno" />
             <h3>Desayunos Sorpresas</h3>
             <a href="url-a-tu-servicio-1">Ver Catálogo</a>
           </div>
           <div>
-            <img src="./img/ramillete3.jpeg" alt="" />
+            <img src="./img/ramillete3.jpeg" alt="ramillete" />
             <h3>Arreglos Florales/Bouquets</h3>
             <a href="url-a-tu-servicio-1">Ver Catálogo</a>
           </div>
           <div>
-            <img src="./img/centro.jpeg" alt="" />
+            <img src="./img/centro.jpeg" alt="centro" />
             <h3>Centro de Mesas/Decoraciones</h3>
             <a href="url-a-tu-servicio-1">Ver Catálogo</a>
           </div>
           <div>
-            <img src="./img/detalles.jpeg" alt="" />
+            <img src="./img/detalles.jpeg" alt="detalles" />
             <h3>Detalles Personalizados</h3>
             <a href="url-a-tu-servicio-1">Ver Catálogo</a>
           </div>
           <div>
-            <img src="./img/talleres.jpeg" alt="" />
+            <img src="./img/talleres.jpeg" alt="taller" />
             <h3>Talleres</h3>
             <a href="url-a-tu-servicio-1">Ver Catálogo</a>
           </div>
@@ -142,7 +147,7 @@
         <h2>¿Por qué elegir a Valentina´s Detalles?</h2>
         <div class="elegirnos-flex">
           <div>
-            <img src="./img/calidad.png" alt="" />
+            <img src="./img/calidad.png" alt="calidad" />
             <h3>Calidad</h3>
             <p>
               No solo nos importa la estética, sino que perdure tu arreglo. Te
@@ -151,7 +156,7 @@
             </p>
           </div>
           <div>
-            <img src="./img/pernalizado.png" alt="" />
+            <img src="./img/pernalizado.png" alt="personalizado" />
             <h3>Personalizacíon</h3>
             <p>
               Ningún detalles es como el anterior, nos encargamos de haberlos
@@ -159,7 +164,7 @@
             </p>
           </div>
           <div>
-            <img src="./img/confianza.png" alt="" />
+            <img src="./img/confianza.png" alt="confianza" />
             <h3>Confianza y Empatía</h3>
             <p>
               Valentina's Detalles te ofrece completa confianza, complicidad y
@@ -168,7 +173,7 @@
             </p>
           </div>
           <div>
-            <img src="./img/delivery.png" alt="" />
+            <img src="./img/delivery.png" alt="envio" />
             <h3>Delivery Express</h3>
             <p>
               Entrega a domicilio o al lugar deseado, gratis a zonas céntricas o
@@ -177,10 +182,14 @@
           </div>
         </div>
       </section>
+      <div class="whatsapp">
+        <i class="bi bi-whatsapp">
+          <a href="https://wa.me/584145884803" target="_blank"></a>
+        </i>
+      
+      </div>
     </main>
-    <div class="whatsapp">
-      <i class="bi bi-whatsapp"><a href=""></a></i>
-    </div>
+     
     <footer>
         <div>
             <a href="./index.html">
