--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -14,14 +14,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/style.css" />
+      <meta name="description"
+        content="¡Descubre la belleza de nuestros arreglos florales y regalos personalizados! Ofrecemos desayunos, talleres y decoraciones únicas para cada ocasión. ¡Visítanos!">
+      <meta name="keywords"
+        content=" Valentina Detalles, Flores, regalos, detalles personalizados, centros de mesa, Maracay, Aragua, arreglos florales, Bouquets">
+      <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/estilos.css" />
     <title>Valentina detalles</title>
 </head>
 <body>
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../img/logo1.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="../img/logo1.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
