--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img src="./img/logo1.png" alt="logo"> </a>
+          <a class="navbar-brand" href="./index.html"><h1>Valentina´s Detalles</h1> </a>
           <button
             class="navbar-toggler"
             type="button"
