--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -26,7 +26,7 @@
     <header>
       <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../img/logo1.png" alt="logo"></a>
+          <a class="navbar-brand" href="#"><h1>Valentina´s Detalles</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
